# SuperFamiconv

./: CMakeLists.txt  FEATURES.md  README.md
src/: Image.cpp  Image.h  Optimizer.cpp  Optimizer.h  Palette.cpp  Palette.h  sfc_palette.cpp  superfamiconv.cpp
